[package]
name = "op-challenger-driver"
description = "State loop for the op-challenger agent."
authors = ["clabby"]
version = "0.1.0"
edition = "2021"

[dependencies]
op-challenger-solvers = { path = "../solvers" }

anyhow = "1.0.70"
async-trait = "0.1.68"
ethers = { version = "2.0.1", features = ["ws"] }
serde = "1.0.159"
serde_json = "1.0.95"
tokio = "1.27.0"
tracing = "0.1.37"
postgres = "0.19.5"
