[package]
name = "op-challenger-solvers"
description = "Game solvers for the op-challenger"
authors = ["clabby"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
tracing = "0.1.37"
ethers = { version = "2.0.1", features = ["ws"] }

[dev-dependencies]
op-challenger-driver = { path = "../driver" }
